# geany-llama-plugin

./: .gitignore  COPYING  Makefile.am  README.md  aclocal.m4  configure.ac  geany-llama-plugin.spec
po/: LINGUAS  Makevars.in  POTFILES  POTFILES.in  en.po  hu.po
src/: Makefile.am  document_manager.c  document_manager.h  llm.c  llm.h  llm_http.c  llm_http.h  llm_json.c  llm_json.h  llm_util.c  llm_util.h  plugin.c  plugin.h  request_handler.c  request_handler.h  settings.c  settings.h  types.h  ui.c  ui.h
test/: response.json
